<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity"
    android:id="@+id/layoutConstraint">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvRegistrationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/etRegistrationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginRight="10dp"
        android:imeOptions="actionNext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRegistrationName"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tvRegistrationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/etRegistrationEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:imeOptions="actionNext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRegistrationEmail"
        app:layout_constraintTop_toBottomOf="@id/etRegistrationName"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tvRegistrationPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/etRegistrationPsw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:imeOptions="actionNext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRegistrationPsw"
        app:layout_constraintTop_toBottomOf="@id/etRegistrationEmail"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tvRegistrationConfirmPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationPsw"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/etRegistrationConfirmPsw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:imeOptions="actionNext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRegistrationConfirmPsw"
        app:layout_constraintTop_toBottomOf="@id/etRegistrationPsw"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tvRegistrationContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistrationConfirmPsw"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/etRegistrationContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_contact"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:imeOptions="actionDone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRegistrationContact"
        app:layout_constraintTop_toBottomOf="@id/etRegistrationConfirmPsw"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/etRegistrationContact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>